--- a/package.json
+++ b/package.json
@@ -5,27 +5,31 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "bulma": "^0.7.2",
-    "gatsby": "^2.19.25",
-    "gatsby-image": "^2.0.20",
-    "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-feed": "^2.0.11",
-    "gatsby-plugin-google-analytics": "^2.0.8",
-    "gatsby-plugin-manifest": "^2.0.11",
-    "gatsby-plugin-offline": "^2.0.16",
-    "gatsby-plugin-react-helmet": "^3.0.4",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.32",
-    "gatsby-remark-copy-linked-files": "^2.0.7",
+    "gatsby": "^4.12.1",
+    "gatsby-plugin-catch-links": "^4.12.1",
+    "gatsby-plugin-feed": "^4.12.1",
+    "gatsby-plugin-gatsby-cloud": "^4.12.1",
+    "gatsby-plugin-google-analytics": "^4.12.1",
+    "gatsby-plugin-image": "^2.12.1",
+    "gatsby-plugin-manifest": "^4.12.1",
+    "gatsby-plugin-offline": "^5.12.1",
+    "gatsby-plugin-react-helmet": "^5.12.1",
+    "gatsby-plugin-sass": "^5.12.1",
+    "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-remark-copy-linked-files": "^5.12.1",
+    "gatsby-remark-images": "^6.12.1",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-source-filesystem": "^2.0.28",
-    "gatsby-transformer-json": "^2.1.6",
-    "gatsby-transformer-remark": "^2.1.15",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "node-sass": "^4.11.0",
+    "gatsby-source-filesystem": "^4.12.1",
+    "gatsby-transformer-json": "^4.12.1",
+    "gatsby-transformer-remark": "^5.12.1",
+    "gatsby-transformer-sharp": "^4.12.1",
+    "node-sass": "^7.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "sass": "^1.50.1",
+    "sass-loader": "^12.6.0",
+    "webpack": "^5.72.0"
   },
   "keywords": [
     "gatsby"
