--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,7 @@ public_folder: /images
 
 collections:
   - name: "blog"
-    label: "posts"
+    label: "Posts"
     folder: "src/pages/posts"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
@@ -18,3 +18,126 @@ collections:
       - { label: "Title", name: "title", widget: "string"}
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Body", name: "body", widget: "markdown"}
+  - name: "pages"
+    label: "Pages"
+    files:
+      - file: "src/pages/index.md"
+        label: "Landing Page"
+        name: "index"
+        fields:
+          - {
+              label: "Template Key",
+              name: "template",
+              widget: "hidden",
+              # default: "index-page",
+            }
+          - label: "Address"
+            name: "address"
+            widget: "object"
+            collapsed: true
+            fields: 
+              - {label: "Street Address", name: "street", widget: "string"}
+              - {label: "City", name: "city", widget: "string"}
+              - {label: "Postal Code", name: "post-code", widget: "string"}
+
+
+
+
+          - {
+              label: Mainpitch,
+              name: mainpitch,
+              widget: object,
+              fields:
+                [
+                  {
+                    label: "Template Key",
+                    name: "template",
+                    widget: "hidden",
+                # default: "index-page",
+                  },
+                  {
+                    label: "Component Key",
+                    name: "component",
+                    widget: "component",
+                    default: "block__feature",
+                  },
+                  { label: Title, name: title, widget: string },
+                  { label: Description, name: description, widget: text },
+                ],
+            }
+          - { label: Description, name: description, widget: string }
+          # - {
+          #     label: Intro,
+          #     name: intro,
+          #     widget: object,
+          #     fields:
+          #       [
+          #         { label: Heading, name: heading, widget: string },
+          #         { label: Description, name: description, widget: text },
+          #         {
+          #           label: Blurbs,
+          #           name: blurbs,
+          #           widget: list,
+          #           fields:
+          #             [
+          #               { label: Image, name: image, widget: image },
+          #               { label: Text, name: text, widget: text },
+          #             ],
+          #         },
+          #       ],
+          #   }
+          # - {
+          #     label: Main,
+          #     name: main,
+          #     widget: object,
+          #     fields:
+          #       [
+          #         { label: Heading, name: heading, widget: string },
+          #         { label: Description, name: description, widget: text },
+          #         {
+          #           label: Image1,
+          #           name: image1,
+          #           widget: object,
+          #           fields:
+          #             [
+          #               { label: Image, name: image, widget: image },
+          #               { label: Alt, name: alt, widget: string },
+          #             ],
+          #         },
+          #         {
+          #           label: Image2,
+          #           name: image2,
+          #           widget: object,
+          #           fields:
+          #             [
+          #               { label: Image, name: image, widget: image },
+          #               { label: Alt, name: alt, widget: string },
+          #             ],
+          #         },
+          #         {
+          #           label: Image3,
+          #           name: image3,
+          #           widget: object,
+          #           fields:
+          #             [
+          #               { label: Image, name: image, widget: image },
+          #               { label: Alt, name: alt, widget: string },
+          #             ],
+          #         },
+          #       ],
+          #   }
+
+
+            
+      - file: "src/pages/about-the-demo.md"
+        label: "About"
+        name: "about"
+        fields:
+          - {
+              label: "Template Key",
+              name: "templateKey",
+              widget: "hidden",
+              # default: "about-page",
+            }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
