--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-google-analytics": "^4.12.1",
     "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-manifest": "^4.12.1",
+    "gatsby-plugin-netlify-cms": "^6.13.0",
     "gatsby-plugin-offline": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sass": "^5.12.1",
@@ -23,9 +24,10 @@
     "gatsby-transformer-json": "^4.12.1",
     "gatsby-transformer-remark": "^5.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
+    "netlify-cms-app": "^2.15.72",
     "node-sass": "^7.0.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^17",
+    "react-dom": "^17",
     "react-helmet": "^6.1.0",
     "sass": "^1.50.1",
     "sass-loader": "^12.6.0",
