--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,3 +1,6 @@
+## ##
+## npx netlify-cms-proxy-server
+####
 backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
@@ -7,6 +10,8 @@ publish_mode: editorial_workflow
 # This line should *not* be indented
 media_folder: "static/images" # Media files will be stored in the repo under images/uploads
 public_folder: /images
+
+
 
 collections:
   - name: "blog"
@@ -18,117 +23,12 @@ collections:
       - { label: "Title", name: "title", widget: "string"}
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Body", name: "body", widget: "markdown"}
+
+
+
   - name: "pages"
     label: "Pages"
     files:
-      - file: "src/pages/index.md"
-        label: "Landing Page"
-        name: "index"
-        fields:
-          - {
-              label: "Template Key",
-              name: "template",
-              widget: "hidden",
-              # default: "index-page",
-            }
-          - label: "Address"
-            name: "address"
-            widget: "object"
-            collapsed: true
-            fields: 
-              - {label: "Street Address", name: "street", widget: "string"}
-              - {label: "City", name: "city", widget: "string"}
-              - {label: "Postal Code", name: "post-code", widget: "string"}
-
-
-
-
-          - {
-              label: Mainpitch,
-              name: mainpitch,
-              widget: object,
-              fields:
-                [
-                  {
-                    label: "Template Key",
-                    name: "template",
-                    widget: "hidden",
-                # default: "index-page",
-                  },
-                  {
-                    label: "Component Key",
-                    name: "component",
-                    widget: "component",
-                    default: "block__feature",
-                  },
-                  { label: Title, name: title, widget: string },
-                  { label: Description, name: description, widget: text },
-                ],
-            }
-          - { label: Description, name: description, widget: string }
-          # - {
-          #     label: Intro,
-          #     name: intro,
-          #     widget: object,
-          #     fields:
-          #       [
-          #         { label: Heading, name: heading, widget: string },
-          #         { label: Description, name: description, widget: text },
-          #         {
-          #           label: Blurbs,
-          #           name: blurbs,
-          #           widget: list,
-          #           fields:
-          #             [
-          #               { label: Image, name: image, widget: image },
-          #               { label: Text, name: text, widget: text },
-          #             ],
-          #         },
-          #       ],
-          #   }
-          # - {
-          #     label: Main,
-          #     name: main,
-          #     widget: object,
-          #     fields:
-          #       [
-          #         { label: Heading, name: heading, widget: string },
-          #         { label: Description, name: description, widget: text },
-          #         {
-          #           label: Image1,
-          #           name: image1,
-          #           widget: object,
-          #           fields:
-          #             [
-          #               { label: Image, name: image, widget: image },
-          #               { label: Alt, name: alt, widget: string },
-          #             ],
-          #         },
-          #         {
-          #           label: Image2,
-          #           name: image2,
-          #           widget: object,
-          #           fields:
-          #             [
-          #               { label: Image, name: image, widget: image },
-          #               { label: Alt, name: alt, widget: string },
-          #             ],
-          #         },
-          #         {
-          #           label: Image3,
-          #           name: image3,
-          #           widget: object,
-          #           fields:
-          #             [
-          #               { label: Image, name: image, widget: image },
-          #               { label: Alt, name: alt, widget: string },
-          #             ],
-          #         },
-          #       ],
-          #   }
-
-
-            
       - file: "src/pages/about-the-demo.md"
         label: "About"
         name: "about"
@@ -141,3 +41,101 @@ collections:
             }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
+
+      - file: "src/pages/index.md"
+        label: "Landing Page"
+        name: "index"
+        fields:
+          - name: categories
+            label: Categories
+            widget: categories
+            separator: __
+          - {
+              label: "Template Key",
+              name: "template",
+              widget: "hidden",
+              # default: "index-page",
+            }
+          - {
+              label: Mainpitch,
+              name: mainpitch,
+              widget: object,
+              fields:
+                [
+                  {
+                    label: "Template Key",
+                    name: "template",
+                    widget: "hidden",
+                # default: "index-page",
+                  },
+                  
+                  { label: Title, name: title, widget: string },
+                  { label: Description, name: description, widget: text },
+                ],
+            }
+
+
+
+
+#           - { label: Description, name: description, widget: string }
+#           # - {
+#           #     label: Intro,
+#           #     name: intro,
+#           #     widget: object,
+#           #     fields:
+#           #       [
+#           #         { label: Heading, name: heading, widget: string },
+#           #         { label: Description, name: description, widget: text },
+#           #         {
+#           #           label: Blurbs,
+#           #           name: blurbs,
+#           #           widget: list,
+#           #           fields:
+#           #             [
+#           #               { label: Image, name: image, widget: image },
+#           #               { label: Text, name: text, widget: text },
+#           #             ],
+#           #         },
+#           #       ],
+#           #   }
+#           # - {
+#           #     label: Main,
+#           #     name: main,
+#           #     widget: object,
+#           #     fields:
+#           #       [
+#           #         { label: Heading, name: heading, widget: string },
+#           #         { label: Description, name: description, widget: text },
+#           #         {
+#           #           label: Image1,
+#           #           name: image1,
+#           #           widget: object,
+#           #           fields:
+#           #             [
+#           #               { label: Image, name: image, widget: image },
+#           #               { label: Alt, name: alt, widget: string },
+#           #             ],
+#           #         },
+#           #         {
+#           #           label: Image2,
+#           #           name: image2,
+#           #           widget: object,
+#           #           fields:
+#           #             [
+#           #               { label: Image, name: image, widget: image },
+#           #               { label: Alt, name: alt, widget: string },
+#           #             ],
+#           #         },
+#           #         {
+#           #           label: Image3,
+#           #           name: image3,
+#           #           widget: object,
+#           #           fields:
+#           #             [
+#           #               { label: Image, name: image, widget: image },
+#           #               { label: Alt, name: alt, widget: string },
+#           #             ],
+#           #         },
+#           #       ],
+#           #   }
+
