--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ backend:
 local_backend: true
 publish_mode: editorial_workflow
 # This line should *not* be indented
-media_folder: "static/images" # Media files will be stored in the repo under images/uploads
+media_folder: static/images # Media files will be stored in the repo under images/uploads
 public_folder: /images
 
 
@@ -22,49 +22,21 @@ collections:
         label: "Landing Page"
         name: "index"
         fields:
-          - name: categories
-            label: Categories
-            widget: categories
-            separator: __
-          - {
-              label: "Template Key",
-              name: "template",
-              widget: "hidden",
-              # default: "",
-            }
+          # - name: categories
+          #   label: Categories
+          #   widget: categories
+          #   separator: __
+
           - { label: "Title", name: "title", widget: "string" }
-          # - {
-          #     label: Mainpitch,
-          #     name: mainpitch,
-          #     widget: object,
-          #     fields:
-          #       [
-          #         {
-          #           label: "Template Key",
-          #           name: "template",
-          #           widget: "hidden",
-          #       # default: "index-page",
-          #         },
-                  
-          #         { label: Title, name: title, widget: string },
-          #         { label: Description, name: description, widget: text },
-          #       ],
-          #   }
-          - {
-              label: block__hero,
-              name: block__hero,
-              widget: object,
-              fields:
-                [
-                  # { label: "Template Key", name: "template", widget: "hidden" },
-                  { label: "Component", name: "component", widget: "string" },
-                  { label: "Background", name: "background", widget: "string" },
-                  { label: Title, name: title, widget: string },
-                  { label: Subtitle, name: subtitle, widget: text },
-                ],
+          - { label: "Template Key", name: "template", widget: hidden, default: "" }
+          - { label: "Blocks", name: "blocks", widget: list, ## object is no good
+              fields: [
+                { name: "component", widget: string }, 
+                { label: "Background", name: "background", widget: string },
+                { label: Title, name: title, widget: string },
+                { label: Subtitle, name: subtitle, widget: text },
+              ]
             }
-
-
 
       - file: "src/pages/about-the-demo.md"
         label: "About"
@@ -78,69 +50,6 @@ collections:
             }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
-
-
-#           - { label: Description, name: description, widget: string }
-#           # - {
-#           #     label: Intro,
-#           #     name: intro,
-#           #     widget: object,
-#           #     fields:
-#           #       [
-#           #         { label: Heading, name: heading, widget: string },
-#           #         { label: Description, name: description, widget: text },
-#           #         {
-#           #           label: Blurbs,
-#           #           name: blurbs,
-#           #           widget: list,
-#           #           fields:
-#           #             [
-#           #               { label: Image, name: image, widget: image },
-#           #               { label: Text, name: text, widget: text },
-#           #             ],
-#           #         },
-#           #       ],
-#           #   }
-#           # - {
-#           #     label: Main,
-#           #     name: main,
-#           #     widget: object,
-#           #     fields:
-#           #       [
-#           #         { label: Heading, name: heading, widget: string },
-#           #         { label: Description, name: description, widget: text },
-#           #         {
-#           #           label: Image1,
-#           #           name: image1,
-#           #           widget: object,
-#           #           fields:
-#           #             [
-#           #               { label: Image, name: image, widget: image },
-#           #               { label: Alt, name: alt, widget: string },
-#           #             ],
-#           #         },
-#           #         {
-#           #           label: Image2,
-#           #           name: image2,
-#           #           widget: object,
-#           #           fields:
-#           #             [
-#           #               { label: Image, name: image, widget: image },
-#           #               { label: Alt, name: alt, widget: string },
-#           #             ],
-#           #         },
-#           #         {
-#           #           label: Image3,
-#           #           name: image3,
-#           #           widget: object,
-#           #           fields:
-#           #             [
-#           #               { label: Image, name: image, widget: image },
-#           #               { label: Alt, name: alt, widget: string },
-#           #             ],
-#           #         },
-#           #       ],
-#           #   }
 
   - name: "blog"
     label: "Posts"
